RESOLVED FIXED282854
Unreviewed macOS build fix after 286359@main
https://bugs.webkit.org/show_bug.cgi?id=282854
Summary Unreviewed macOS build fix after 286359@main
Chris Dumez
Reported 2024-11-08 14:54:59 PST
Build fix after 286359@main
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-08 14:55:13 PST
Chris Dumez
Comment 2 2024-11-08 14:56:06 PST
EWS
Comment 3 2024-11-08 15:17:56 PST
Committed 286363@main (b90c95552b21): <https://commits.webkit.org/286363@main> Reviewed commits have been landed. Closing PR #36419 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.