Unreviewed macOS build fix after 286359@main https://bugs.webkit.org/show_bug.cgi?id=282854 rdar://139538813

* Source/JavaScriptCore/jit/ExecutableAllocator.cpp:

Canonical link: https://commits.webkit.org/286363@main