Source/JavaScriptCore/runtime/Options.cpp
@@ -112,10 +112,12 @@ public:
 
     bool operator==(const Option&) const;
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
     ASCIILiteral name() const { return g_constMetaData[m_id].name; }
     ASCIILiteral description() const { return g_constMetaData[m_id].description; }
     Options::Type type() const { return g_constMetaData[m_id].type; }
     Options::Availability availability() const { return g_constMetaData[m_id].availability; }
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
 
     Option(Options::ID id, void* addressOfValue)
         : m_id(id)
@@ -157,6 +159,8 @@ static void releaseMetadata()
     g_metadata.get() = nullptr;
 }
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
+
 static const Option defaultFor(Options::ID id)
 {
     auto offset = g_constMetaData[id].offsetOfOption;
@@ -169,6 +173,8 @@ inline static void* addressOfOption(Options::ID id)
     auto offset = g_constMetaData[id].offsetOfOption;
     return reinterpret_cast<uint8_t*>(&g_jscConfig.options) + offset;
 }
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
 
 static const Option optionFor(Options::ID id)
 {
@@ -458,6 +464,8 @@ bool Options::defaultTCSMValue()
 
 const char* const OptionRange::s_nullRangeStr = "<null>";
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
+
 bool OptionRange::init(const char* rangeString)
 {
     // rangeString should be in the form of [!]<low>[:<high>]
@@ -504,6 +512,8 @@ bool OptionRange::init(const char* rangeString)
 
     return true;
 }
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
 
 bool OptionRange::isInRange(unsigned count) const
 {
@@ -728,6 +738,9 @@ void Options::executeDumpOptions()
     dumpAllOptions(builder, level, title, nullptr, "   "_s, "\n"_s, DumpDefaults);
     dataLog(builder.toString());
 }
+
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
 
 void Options::notifyOptionsChanged()
 {
@@ -982,6 +995,8 @@ void Options::notifyOptionsChanged()
     ASSERT(Options::criticalGCMemoryThreshold() > 0.0 && Options::criticalGCMemoryThreshold() < 1.0);
 }
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
+
 #if OS(WINDOWS)
 // FIXME: Use equalLettersIgnoringASCIICase.
 inline bool strncasecmp(const char* str1, const char* str2, size_t n)
@@ -989,6 +1004,8 @@ inline bool strncasecmp(const char* str1, const char* str2, size_t n)
     return _strnicmp(str1, str2, n);
 }
 #endif
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
 
 void Options::initialize()
 {
@@ -1077,6 +1094,8 @@ void Options::initialize()
     });
 }
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
+
 void Options::finalize()
 {
     ASSERT(!g_jscConfig.options.allowUnfinalizedAccess);
@@ -1095,6 +1114,8 @@ static bool isSeparator(char c)
 {
     return isUnicodeCompatibleASCIIWhitespace(c) || (c == ',');
 }
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
 
 bool Options::setOptions(const char* optionsStr)
 {
@@ -1210,6 +1231,8 @@ bool Options::setOptionWithoutAlias(const char* arg, bool verify)
     return false; // No option matched.
 }
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
+
 static ASCIILiteral invertBoolOptionValue(const char* valueStr)
 {
     std::optional<OptionsStorage::Bool> value = parse<OptionsStorage::Bool>(valueStr);
@@ -1218,6 +1241,8 @@ static ASCIILiteral invertBoolOptionValue(const char* valueStr)
     return value.value() ? "false"_s : "true"_s;
 }
 
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
 
 bool Options::setAliasedOption(const char* arg, bool verify)
 {
@@ -1254,6 +1279,8 @@ bool Options::setAliasedOption(const char* arg, bool verify)
 
     return false; // No option matched.
 }
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
 
 bool Options::setOption(const char* arg, bool verify)
 {
@@ -1354,6 +1381,8 @@ void Options::assertOptionsAreCoherent()
 
 namespace OptionsHelper {
 
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
+
 void Option::initValue(void* addressOfValue)
 {
     Options::Type type = g_constMetaData[m_id].type;
@@ -1387,6 +1416,8 @@ void Option::initValue(void* addressOfValue)
         break;
     }
 }
+
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
 
 void Option::dump(StringBuilder& builder) const
 {
